--- a/css/default.css
+++ b/css/default.css
@@ -84,7 +84,7 @@
 	font-family: Tahoma, Verdana, Trebuchet MS, sans-serif;
 	font-size: 10pt;
 	text-decoration: underline;
-	color: 27408b;
+	color: #27408b;
 }
 
 .current_left_rows {
